v1.1.7 20150806
* [#9] improve robustness to filesystem delays for task
wrapper parameter file
* [#9] improve error log specificity when anomolous task
wrapper output occurs in localhost run mode
v1.1.6 20150713
* Fix multithread conflict introduced by [#5] fix
v1.1.5 20150710
* Changed to BSD 2-Clause license
* [#5] fix in-workflow check for nested workflows
v1.1.4 20150527
* added check for local SMTP service before sending email notification
* added extra check aginst workflow methods running outside of pyflow runtime
v1.1.3 20141028
* fix master node memory spike for SGE jobs identified by Lilian Janin
* added Windows OS patches form Tobias Mann
v1.1.2 20131026
* added python distutils setup.py provided by Ryan Kelley
v1.1.1 20130716
* fix issue with new startFromTasks feature when used with subWorkflows
v1.1.0 20130715
* add new features to allow only part of workflow to be run and/or continued
v1.0.1 20130710
* Fix O(exp) scaling problems in DAG handling methods
v1.0.0 20130507
* relicenced to Illumina Open Source Software License v1
v0.6.26 20130304
* fix bug in forceContinue'd workflow runs
v0.6.25 20130221
* Add optional warning and error log which contains all logged warning or error messages.
* allow specification of a custom notification message on successful workflow completion
* allow any task to specify its own retry parameters, overriding the
run-level parameters of the same name
* add retryMode to allow task retry to be applied to local mode
v0.6.24 20121128
* accelerate localhost task sweep so that short-running task workflows can
execute more quickly
* create new mutex option to addTask, this allows a set of tasks to share a mutex
id, causing no more than one in the group to be executed at the same time
v0.6.23 20121018
* change cwd parameter to not require directory to exist
* fix version number search so that an non-installed version does not require git to be installed
v0.6.22 20121002